红黑树和系统知识

--- a/system/操作系统基本知识.md
+++ b/system/操作系统基本知识.md
@@ -1,6 +1,86 @@
 #  操作系统基本知识
 
-　　操作系统
+## 1. 操作系统分类
+
+　　批处理操作系统（单道、多道）、分时操作系统（Unix）、实时操作系统（MsgOS）、网络操作系统、分布式操作系统、微机操作系统（Linux、Windows、IOS 等）、嵌入式操作系统（Android、IOS）。
+
+## 2. 操作系统的 4 个特征
+
+### 2.1. 并发性
+
+　　区别于并行性，并发是指：多个事件在同一时间间隔内发生，并行是指：多个事件在同一时刻发生。
+
+### 2.2. 共享性
+
+　　一般的共享是指某种资源可以被大家使用，在 OS 下的资源共享称为资源复用，具体含义是：系统中的资源可供内存中多个并发的执行的进程共同使用。
+
+### 2.3. 虚拟性
+
+　　通过某种技术将一个物理实体变为若干个逻辑上的对应物的功能即为虚拟。
+
+### 2.4. 不确定性（异步）
+
+　　每道程序完成的时间都是不可预知的，进程是以人们不可预知的速度向前推进的。
+
+## 3. 操作系统的功能
+
+　　操作系统的功能有：处理机管理、文件管理、‘存储管理、设备管理、作业管理。
+
+1. 处理机管理
+
+   也称进程管理。实质上是对处理机执行时间进行管理，采用多道程序等技术将 CPU 的时间真正合理地分配给每个任务。主要包括进程管理、进程同步、进程通信和进程调度。
+
+2. 文件管理
+
+   又称信息管理。主要包括文件存储空间管理、目录管理、文件地读写管理和存取管理。
+
+3. 存储管理
+
+   是对主存储器空间地管理。主要包括存储分配与回收、存储保护、地址映射（变换）和主存扩充。（即内存管理）
+
+4. 设备管理
+
+   实质上是对硬件设备进行管理，其中包括输入输出设备地分配、启动、完成和回收。
+
+5. 作业管理
+
+   包括人物、人机交互和用户界面管理等。
+
+## 4. 处理机管理
+
+### 4.1. 线程与进程
+
+　　进程是具有一定独立功能的程序关于某个数据集合上地一次运行活动，是系统进行资源分配和调度的一个独立单位。
+
+　　线程是进程的一个实体，是 CPU 调度和分派的基本单位，它是比进程更小的能独立运行的基本单位。线程自己基本上不拥有系统资源，只拥有一点在运行中必不可少的资源（如程序计数器、一组寄存器和栈），但是它可与同属一个进程的其他的线程共享进程所拥有的全部资源，也有就绪、运行、阻塞三态。
+
+　　一个线程可以创建和撤销另一个线程；同一个进程中的多个线程之间可以并发执行。相对进程而言，线程是一个更加接近于执行体的概念，它可以与同进程中的其他线程共享数据，但拥有自己的栈空间，拥有独立的执行序列。
+
+#### 6.1.1. PCB
+
+　　为了便于系统描述和管理进程，在 OS 的核心位每个进程专门定义了一个数据结构，进程控制块 PCB。PCB 是进程的唯一标志。
+
+#### 6.1.2. 区别
+
+1. 简而言之，一个程序至少有一个进程，一个进程至少有一个线程。
+2. 线程的划分尺度小于进程，使得多线程程序的并发性高。
+3. 另外，进程在执行过程中拥有独立的内存单元，而多个线程共享内存，从而极大地提高了程序的运行效率。
+4. 线程在执行过程中与进程还是有区别的。每个独立的线程有一个程序运行的入口、顺序执行序列和程序的出口。但是线程不能够独立执行，必须依存在应用程序中，由应用程序提供多个线程执行控制。
+5. 从逻辑角度来看，多线程的意义在于一个应用程序中，有多个执行部分可以同时执行。但操作系统并没有将多个线程看做多个独立的应用，来实现进程的调度和管理以及资源分配。这就是进程和线程的重要区别。
+
+## 5. 存储器管理
+
+
+
+## 6. 设备管理
+
+
+
+## 7. 文件管理
+
+
+
+## 8. 作业管理
 
 
 
@@ -8,4 +88,4 @@
 
 1. [操作系统基础知识总结整理](https://blog.csdn.net/Song_JiangTao/article/details/79670805)
 2. [操作系统基础知识总结（重要）](https://www.cnblogs.com/xdyixia/p/9274909.html)
-3. [计算机操作系统]([https://github.com/CyC2018/CS-Notes/blob/master/notes/%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%20-%20%E7%9B%AE%E5%BD%95.md](https://github.com/CyC2018/CS-Notes/blob/master/notes/计算机操作系统 - 目录.md))
+3. [计算机操作系统](https://github.com/CyC2018/CS-Notes/blob/master/notes/计算机操作系统 - 目录.md)
