--- a/DataStructure/数据结构/树/红黑树.md
+++ b/DataStructure/数据结构/树/红黑树.md
@@ -230,6 +230,263 @@ private void flipColor(Node<K, V> node) {
 
 ![](image/自上而下的插入方案.png)
 
+#### 2-3-4 树和红黑树的等价关系
+
+　　2-3-4 树和红黑树的等价关系和 2-3 树和红黑树的等价关系是类似的。不同的是 2-3-4 的 4- 节点分解后的节点颜色变成如下形式：
+
+![](image/2-3-4的4-节点分解后的节点颜色.png)
+
+　　所以可以得出下面一棵 2-3-4 树和红黑树的等价关系图：
+
+![](image/2-3-4树和红黑树的等价关系图.png)
+
+　　上面在介绍红黑树实现 2-3 树的时候讲解了它的插入操作：
+
+```
+
+```
+
+　　可以很轻松的把它改成 2-3-4 的插入逻辑（只需要把颜色翻转的逻辑提到二分搜索的前面即可）：
+
+```
+
+```
+
+　　下面是 2-3-4 树和 2-3 树插入结果的对比图：
+
+![](image/2-3-4树和2-3树插入结果的对比图.png)
+
+　　一开始用红黑树实现完美平衡的 2-3 树，左右节点是不会都是红色的，现在用红黑树实现 2-3-4 树，左右节点的可以同时是红色的，这样的红黑树效率更高。因为如果遇到左右节点是红色，就进行颜色翻转，还需要对红色的父节点进行向上回溯，因为父节点染成红色了，可能父节点的父节点也是红色，可能需要进行节点旋转或者颜色翻转操作，所以说 2-3-4 树式的红黑树效率更高。
+
+　　《算法 4》是用红黑树实现 2-3 树的，并不是 2-3-4 树。但是如果是用红黑树实现 2-3-4 树就和《算法导论》上介绍的红黑树一样吗？不一样。
+
+　　下面继续做一个测试，分别往上面红黑树实现的 2-3-4 树和 JDK TreeMap 中插入 [E,D,R,O,S,X]。
+
+![](image/2-3-4树和JDKTreeMap插入对比.png)
+
+　　虽然两棵树都是红黑树，但是却不一样。并且 TreeMap 允许右节点是红色，在 2-3-4 树中最多是左右子节点同时是红色的情况，不会出现左节点是黑色，右边的兄弟节点是红色的情况，为什么会有这样的差异呢？
+
+　　从上面的 2-3-4 树的插入逻辑可以看出，如果右节点是红色会执行左旋转操作，所以不会出现单独红右节点的情况，也就是说只会出现单独的左节点是红色的情况，把这种形式的红黑树称之为左倾红黑树（Left Leaning Red Blank Tree），包括上面的红黑数实现的完美平衡的 2-3 树也是左倾红黑树。
+
+　　为什么在《算法 4》中，作者规定所有的红色链接都是左链接，这只是人为的规定，当然也可以是右链接，规定红链接都是左链，可以使用更少的代码来实现黑色平衡，需要考虑的情况会更少，就如上面介绍的插入操作，只需要考虑 3 种情况即可。
+
+　　但是一般意义上的红黑树是不需要维持红色左倾的这个性质的，所以为什么 TreeMap 是允许单独右红节点的。
+
+　　如果还需要维持左倾情况，这样的话就更多的操作，可能还需要节点旋转和颜色的翻转，性能更差一些，虽然也符合红黑树的性质。
+
+　　下面来分析下一般意义上的红黑树的插入和删除操作，也就是《算法导论》上介绍的红黑树。
+
+### 红黑树的插入操作
+
+　　插入操作有两种情况是非常简单的，所以在这里单独说一下：
+
+1. case 1. 如果插入的节点是根节点，直接把该节点设置为黑色，整个插入操作结束。
+
+　　如下图所示：
+
+![](image/红黑树插入1.png)
+
+2. case 2. 如果插入的节点的父节点是黑色，也无需调整，整个插入操作结束
+
+![](image/红黑树插入2.png)
+
+　　下面开始介绍比较复杂的情况。
+
+　　红黑树插入操作，只需要处理父节点是红色的情况，因为一开始红黑树肯定是黑色平衡的，就是因为往叶子节点插入元素后可能出现两个连续的红色的节点。
+
+　　需要注意的是，把新插入的节点默认设置为红色，初始的时候，正在处理的节点就是插入的节点，在不断调整的过程中，正在处理的节点会不断的变化，且叔叔、爷爷、父节点都是相对于当前正在处理的节点来说的。
+
+3. case 3. 叔叔节点为红色，正在处理的节点可以是左也可以是右节点
+
+　　调整策略：由于父节点是红色，叔叔节点是红色，爷爷节点是黑色，执行颜色翻转操作。然后把当前正在处理的节点设置为爷爷节点，如果爷爷的父节点是黑色插入操作劫色，如果是红色继续处理。
+
+4. case 4. 输数节点是黑色，正在处理的节点是右节点
+
+　　调整策略：由于父节点是红色，叔叔节点为黑色，那么爷爷节点肯定是黑色，把正在处理的节点设置为父节点，然后左旋，形成 CASE5 情况。
+
+5. case 5. 叔叔节点为黑色，正在处理的节点是左孩子
+
+　　调整策略：由于父节点是红色，叔叔节点为黑色，那么爷爷节点肯定是黑色，把父节点染黑，爷爷节点染红，然后爷爷节点右旋。
+
+　　case3、case4、case5 如果单独来理解的话比较困难，将这三种情况通过一张流程图串联起来，将这三个 case 形成一个整体，蓝色箭头表示正在处理的节点，如下所示：
+
+![](image/红黑树插入3.png)
+
+### 红黑树删除操作
+
+　　红黑树的删除操作比插入操作更加复杂一些。
+
+　　为了描述方便，把正在处理的节点称之为 X，父节点为 P（Parent），兄弟节点称之为 S（Sibling），左侄子称之为 LN（Left Nephew），右侄子称之为 RN（Right Nephew）。
+
+　　如果删除的节点是黑色，那么就导致本来保持黑平衡的红黑树失衡了，从下图就可以看出节点 P 到左子树的叶子节点经过的黑节点数量为 4（2+2），到右子树的叶子节点经过的黑色节点数量是 5（3+2），如下图所示：
+
+![](image/红黑树删除1.png)
+
+　　红黑树的删除操作，如果删除的是黑色会导致红黑树就不能保持黑色平衡了，需要进行调整了；如果删除的是红色，那么就无需调整，直接删除即可，因为没有破坏黑色平衡。
+
+　　删除节点后，无需调整的情况：
+
+1. case 1 删除的节点是红色节点，直接删除即可。
+
+2. case 2 删除的节点是黑色，如果当前处理的节点 x 是根节点。
+
+   无论根节点是什么颜色，都将根节点设置为黑色。
+
+3. case 3 删除的节点是黑色，如果当前处理的节点是红色节点，将该节点设置为黑色
+
+   因为删除黑色结束后，就打破了黑色平衡，黑高少了 1，所以把一个红色节点设置为黑色，这样黑高又平衡了。
+
+　　删除节点后，需要调整的情况：
+
+　　正在处理的节点为 x，要删除的节点是左节点，分为 4 种情况:
+
+4. case 4 兄弟节点为红色
+
+   调整方案：兄弟设置为黑色，父节点设置为红色，父节点进行左旋转，转换为 case5、case6、case7。
+
+5. case 5 兄弟节点为黑色，左侄子 LN 为黑色，右侄子 RN 为黑色
+
+   在这种条件下，还有两种情况：父节点是红色或黑色，不管是哪种情况，调整方案都是一致的。
+
+   调整方案：将兄弟节点设置为红色，将当前处理的节点设置为父节点  p。
+
+6. case 6 兄弟节点为黑色，左侄子为红色，右侄子 RN 为黑色
+
+   调整方案：将左侄子节点设置为黑色，兄弟节点设置为红色，兄弟节点右旋转，这样就转化成了 case 7。
+
+7. 兄弟节点为黑色，左侄子不管红黑，右侄子为红色
+
+   处理方式：兄弟节点变成父节点的颜色，然后父节点设置黑色，右侄子设置黑色，父节点进行左旋转。
+
+　　和插入操作一样，下面通过一张流程图把删除需要调整的情况串联起来：
+
+![](image/红黑树删除2.png)
+
+　　上面处理的所有情况都是基于正在处理的节点是左节点，如果要调整正在处理的节点是右节点的情况，就是上面的处理的镜像，插入操作也是同理。
+
+## Java TreeMap、TreeSet 源码分析
+
+　　TreeMap 的底层就是用红黑树实现的，它在插入后调整操作主要在 fixAfterInsertion 方法里，如下所示：
+
+```java
+    private void fixAfterInsertion(TreeMapEntry<K,V> x) {
+        x.color = RED;
+
+        while (x != null && x != root && x.parent.color == RED) {
+            if (parentOf(x) == leftOf(parentOf(parentOf(x)))) {
+                TreeMapEntry<K,V> y = rightOf(parentOf(parentOf(x)));
+                // case 3 情况
+                if (colorOf(y) == RED) {
+                    setColor(parentOf(x), BLACK);
+                    setColor(y, BLACK);
+                    setColor(parentOf(parentOf(x)), RED);
+                    x = parentOf(parentOf(x));
+                } else {
+                    // case 4 情况
+                    if (x == rightOf(parentOf(x))) {
+                        x = parentOf(x);
+                        rotateLeft(x);
+                    }
+                    // case 5 情况
+                    setColor(parentOf(x), BLACK);
+                    setColor(parentOf(parentOf(x)), RED);
+                    rotateRight(parentOf(parentOf(x)));
+                }
+            } else {
+                // 镜像情况
+                TreeMapEntry<K,V> y = leftOf(parentOf(parentOf(x)));
+                if (colorOf(y) == RED) {
+                    setColor(parentOf(x), BLACK);
+                    setColor(y, BLACK);
+                    setColor(parentOf(parentOf(x)), RED);
+                    x = parentOf(parentOf(x));
+                } else {
+                    if (x == leftOf(parentOf(x))) {
+                        x = parentOf(x);
+                        rotateRight(x);
+                    }
+                    setColor(parentOf(x), BLACK);
+                    setColor(parentOf(parentOf(x)), RED);
+                    rotateLeft(parentOf(parentOf(x)));
+                }
+            }
+        }
+        root.color = BLACK;
+    }
+```
+
+　　删除后调整操作主要在 fixAfterDeletion 方法：
+
+```java
+    /** From CLR */
+    private void fixAfterDeletion(TreeMapEntry<K,V> x) {
+        while (x != root && colorOf(x) == BLACK) {
+            if (x == leftOf(parentOf(x))) {
+                TreeMapEntry<K,V> sib = rightOf(parentOf(x));
+				// case 4 的情况
+                if (colorOf(sib) == RED) {
+                    setColor(sib, BLACK);
+                    setColor(parentOf(x), RED);
+                    rotateLeft(parentOf(x));
+                    sib = rightOf(parentOf(x));
+                }
+				// case 5 的情况
+                if (colorOf(leftOf(sib))  == BLACK &&
+                    colorOf(rightOf(sib)) == BLACK) {
+                    setColor(sib, RED);
+                    x = parentOf(x);
+                } else {
+                    // case 6 的情况
+                    if (colorOf(rightOf(sib)) == BLACK) {
+                        setColor(leftOf(sib), BLACK);
+                        setColor(sib, RED);
+                        rotateRight(sib);
+                        sib = rightOf(parentOf(x));
+                    }
+                    // case 7 的情况
+                    setColor(sib, colorOf(parentOf(x)));
+                    setColor(parentOf(x), BLACK);
+                    setColor(rightOf(sib), BLACK);
+                    rotateLeft(parentOf(x));
+                    x = root;
+                }
+            } else { // symmetric
+                // 镜像的情况
+                TreeMapEntry<K,V> sib = leftOf(parentOf(x));
+
+                if (colorOf(sib) == RED) {
+                    setColor(sib, BLACK);
+                    setColor(parentOf(x), RED);
+                    rotateRight(parentOf(x));
+                    sib = leftOf(parentOf(x));
+                }
+
+                if (colorOf(rightOf(sib)) == BLACK &&
+                    colorOf(leftOf(sib)) == BLACK) {
+                    setColor(sib, RED);
+                    x = parentOf(x);
+                } else {
+                    if (colorOf(leftOf(sib)) == BLACK) {
+                        setColor(rightOf(sib), BLACK);
+                        setColor(sib, RED);
+                        rotateLeft(sib);
+                        sib = leftOf(parentOf(x));
+                    }
+                    setColor(sib, colorOf(parentOf(x)));
+                    setColor(parentOf(x), BLACK);
+                    setColor(leftOf(sib), BLACK);
+                    rotateRight(parentOf(x));
+                    x = root;
+                }
+            }
+        }
+
+        setColor(x, BLACK);
+    }
+```
+
+　　TreeSet 底层就是用 TreeMap 来实现的，往 TreeSet 添加进的元素当作 TreeMap 的 key，TreeMap 的 value 是一个常量 Object。掌握了红黑树，对于这两个集合的原理就不难理解了。
+
 
 
 ## 参考文章
