--- a/system/操作系统基本知识.md
+++ b/system/操作系统基本知识.md
@@ -68,21 +68,202 @@
 4. 线程在执行过程中与进程还是有区别的。每个独立的线程有一个程序运行的入口、顺序执行序列和程序的出口。但是线程不能够独立执行，必须依存在应用程序中，由应用程序提供多个线程执行控制。
 5. 从逻辑角度来看，多线程的意义在于一个应用程序中，有多个执行部分可以同时执行。但操作系统并没有将多个线程看做多个独立的应用，来实现进程的调度和管理以及资源分配。这就是进程和线程的重要区别。
 
+#### 6.1.3. 优缺点
+
+　　线程执行开销小，单不利于资源的管理和保护；而进程正相反。同时，线程适合于在 SMP 机器上运行，而进程则可以跨机器迁移。
+
+#### 6.1.4. 程序顺序执行的特征
+
+1. 顺序性：每一操作必须在下一操作开始之前结束。
+2. 封闭性：程序运行时独占全机资源，资源的状态（除初始状态外）只有本程序才能改变，程序一旦执行，其结果不受外界影响。
+3. 可再现性：程序执行环境和初始条件相同，重复执行时，结果相同。
+
+#### 6.1.5. 程序并发执行的特征
+
+1. 间断性：程序并发运行时，共享系统资源，为完成统一任务相互合作，会形成相互制约关系，导致并发程序具有 “ 执行-暂停-执行 ” 这种间断性的活动规律。
+2. 失去封闭性：程序并发执行时，资源状态由多个程序改变，某程序执行时，会收到其他程序影响，失去封闭性。
+3. 不可再现性：失去封闭性，导致失去可再现性。
+
+#### 6.1.6. 进程的特征
+
+1. 结构特征：程序段、相关数据段和 PCB 三部分构成进程实体。
+2. 动态性：进程实体的一次执行过程，具有生命期，而程序是有序指令集合，是静态的。
+3. 并发性：多个进程同时存于内存，在一段时间内同时运行。
+4. 独立性：进程实体是一个能独立运行、独立分配资源和独立接收调度的基本单位。
+5. 异步性：进程按各自独立的、不可预知的速度向前推进。
+
+#### 6.1.7. 进程的状态
+
+　　三态模型（左图）、五态模型（右图）
+
+![](image/进程的状态.png)
+
+#### 6.1.8. 进程间的通信（同步与互斥）
+
+　　由于多个进程可以并发执行，所以进程间必然存在资源共享和相互合作的问题。进程通信是指各个进程交换信息的过程。
+
+　　同步时合作进程间直接制约问题，互斥是申请临界资源进程间的间接制约问题。（临界资源（Critical Resource,CR）：在同一时间只能供一个进程使用的资源，例如：打印机、磁带机等硬件资源）。
+
+　　临界区管理 4 条原则：（临界区：每个进程中访问临界资源的那段代码）
+
+1. 有空即进。
+2. 无空则等。
+3. 有限等待：要求访问临界区的进程，保证有限时间内进入临界区，避免死等。
+4. 让权等待：进程不能进入临界区时，应立即释放处理机，避免忙等。
+
+#### 6.1.9. 信号量机制
+
+　　信号量机制：即利用 PV 操作来对信号量进行处理。
+
+　　信号量（Semaphore）的数据结构为一个值和一个指针，指针指向等待该信号量的下一个进程。信号量的值与相应资源的使用情况有关。
+
+　　当它的值大于 0 时，表示当前可用资源的数量。
+
+　　当它的值小于 0 时，其绝对值表示等待使用该资源的进程个数。
+
+　　注意，信号量的值仅能由 PV 操作来改变。
+
+　　一般来说，信号量 S>= 0 时，S 表示可用资源的数量。执行一次 P 操作意味着请求分配一个单位资源，因此 S 的值减 1；当 S < 0 时，表示已经没有可用资源，请求者必须等待别的进程释放该类资源，它才能运行下去。而执行一个 V 操作意味着释放一个单位资源，因此 S 的值加 1；若 S <= 0，表示有某些进程正在等待该资源，因此要环形一个等待状态的进程，使之运行下去。 
+
+#### 6.1.10. 进程调度：如何分配 CPU
+
+　　调度方法分为可剥夺和不可剥夺两种。即当有更高优先级的进程到来时，是否可以将正在运行进程的 CPU 分配给高优先级的进程，可以则为可剥夺，否则为不可剥夺的。
+
+　　在某些操作系统中，一个作业从提交到完成需要经历高、中、低三级调度。
+
+1. 高级调度：又称长调度或作业调度。它决定处于输入中的哪个后备作业可以调入主系统做好运行的准备，成为一个或一组就绪进程。系统中一个作业（程序）只需经过一次高级调度。
+2. 中级调度：又称短程调度或对换调度。它决定处于交换区中的就绪进程哪个可以调入内存，以便直接参与对 CPU 的竞争。在内存资源紧张时，为了将进程调入内存，必须将内存中处于阻塞状态的进程调出交换区，以便为调入进程腾出空间。
+3. 低级调度：又称短程调度或进程调度。它决定处于内存中的就绪进程中的哪个可以占用 CPU。最活跃、最重要的调度程序，对系统影响也是最大的。
+
+#### 6.1.11. 常见的进程调度算法
+
+　　先来先服务（FCFS）、短作业优先、时间片轮转（固定时间片、可变时间片）、优先级调度（静态优先级、动态优先级）、多级反馈调度（时间片轮转+优先级调度）。
+
+#### 6.1.12. 死锁
+
+　　两个以上的进程互相要求双方释放已经占用的资源导致无法继续运行下去的现象。
+
+　　例如：一个系统有一台扫描仪 R1，一台刻录机 R2，有两个进程 P1、P2，他们都准备将骚猫的文档刻录到 CD 上，P1 先请求 R1 成功，P2 先请求 R2 并成功，后来，P1 又请求 R2，但却因为已经分配而阻塞，P2 请求 R1，也因分配而阻塞，此时，双方都被阻塞，都希望双方释放自己所需的资源，但又谁都不能得到自己所需的资源而继续进程，从而一直占用自己所占的资源，就形成死锁。
+
+#### 6.1.13. 可抢占性资源和不可抢占性资源
+
+　　前者：某进程获得这类资源后，该资源可以在被其他进程或系统抢占。
+
+　　后者：一旦系统将资源分配给一个进程以后，就不能把它强行收回，只能等它用完自行释放。
+
+#### 6.1.14. 产生死锁的原因
+
+1. 竞争不可抢占性资源。
+2. 进程运行推进的顺序不合适。
+3. 竞争可消耗资源。
+
+　　如果系统资源充足，进程的资源请求都能够得到满足，死锁出现的可能性就很低，否则就会因抢夺优先的资源而陷入死锁。其次，进程运行推进顺序与速度不同，也可能产生死锁。
+
+#### 6.1.15. 产生死锁的四个必要条件：互斥条件、请求与保持条件、不可剥夺条件、循环等待条件。
+
+1. 互斥条件：一个资源每次只能被一个进程使用。
+2. 请求与保持条件：一个进程因请求资源而阻塞时，对已获得的资源保持不放。
+3. 不剥夺条件：进程已获取的资源，在未使用完之前，不能强行剥夺。
+4. 循环等待条件：若干进程之间形成一种头尾相连的循环等待资源关系。
+
+　　这四个条件是死锁的必要条件，只要系统发生死锁，这些条件必然成立，而只要上述条件之一不满足，就不会发生死锁。
+
+#### 6.1.16. 解决死锁的 4 种处理策略
+
+　　鸵鸟策略（即不理睬策略）、预防策略、避免策略、检测与解除策略。
+
+#### 6.1.17. 死锁预防
+
+　　预先静态分配法（破坏不可剥夺条件）、资源有序分配法（将资源分类按顺序排列，保证不形成环路）。
+
+#### 6.1.18. 死锁避免
+
+　　银行家算法（对每个资源请求进行检测，确保安全。需要很大的系统开销）。
+
+#### 6.1.19. 死锁解除
+
+　　资源剥夺法、撤销进程法。
+
+#### 6.1.20. 池
+
+　　所谓池的概念，一般是指应用提前向内核批量申请资源，用于接下来的使用和回收，减少资源的初始化和销毁次数等开销，以达到提高系统性能的目标。
+
+　　内存池：真正使用钱申请一片内存区域，有新需求时取出其中一部分使用，不够用时再重新申请新内存。
+
+　　进程池：应用预先创建一组子进程，所有子进程运行相同代码，拥有相同属性，比如 PGID 和优先级等。
+
+　　常见两种工作方式：
+
+1. 主进程通过随机或 round robin 算法来选择子进程作为新任务的服务进程；
+2. 通过一个共享队列来进行同步，所有子进程从该队列中获取任务，不过同时只能有一个子进程能成功获得新任务处理权。
+
+　　线程持：主要应用于任务小而多，处理时间短的场景，比如简单网页请求等。
+
 ## 5. 存储器管理
 
+### 5.1. 存储器的层次
 
+　　在存储层次中，层次越高（越接近 CPU），存储介质的访问速度越快，价格越高，存储容量也越少。
+
+![](image/存储器层次.jpg)
+
+* 主存储器：简称内存或主存，是计算机系统中的主要部件，用来保存进程运行时的程序和数据，也称可执行存储器。
+* 寄存器：寄存器与处理机的速度，寄存器的字长一般是 32 或是 64 位。
+* 高速缓存：介于寄存器和主存储器之间的存储器，主要用来备份内存中常用的数据，以减少处理机对内存的访问次数，这样可以大幅的提高速度。
+* 磁盘缓存：由于磁盘的 I/O 速度远低于内存的速度，所以用磁盘缓存来暂时存放一些磁盘数据和信息，它本身并不是一种实际存在的存储器，而是利用内存中的部分存储空间暂时存访一些信息。
+
+### 5.2. 程序的装入和链接
+
+![](image/程序的装入和链接.jpg)
+
+### 5.3. 连续分配存储管理方式
+
+* 地址重定位：指将逻辑地址变换成物理地址的过程。分为静态重定位和动态重定位。
+* 存储管理方案：分区存储管理（固定分区、可变分区、可重定位分区）、分页存储管理（将一个进程的地址空间划分为若干个大小相等的区域，成为页，相应地，将主存空间划分成与页相同大小的若干个物理块，称为块。至少需要两次访问主存）、分块存储管理、段页式存储管理（地址结构：段号+段内页号+页内地址）、虚拟存储管理。
+
+　　可变分区请求和释放主要算法：最佳适应算法、最差适应算法、首此适应算法，循环首次适应算法。
+
+　　快表：在页式存储管理中将当前最活跃的少数几页的物理块号保存在高速存储器中，用以提高页式存储管理的性能。（不能两次访问主存）
+
+　　页面置换算法：最佳置换算法（最长时间内不再被访问的页面置换出去）、先进先出置换算法、最近最少未使用置换算法、最近未用置换算法。
 
 ## 6. 设备管理
 
+　　设备管理的目标是如何提高设备的利用率，位用户提供方便统一的界面。
 
+　　设别管理采用的缓冲技术：通道技术、DMS 技术、缓冲技术、Spooling 技术。
+
+　　磁盘调度算法：先来先服务（FCFS）、最短寻道时间（SSTF）、扫描算法（SCAN）（先由里往外到达最外后由外向里）、单向扫描调度算法（CSCAN）（无法换向，只能由里向外）。
 
 ## 7. 文件管理
 
+* 文件的逻辑结构：由结构的记录式文件（由一个以上的记录构成。记录分为定长记录、不定长记录）、无结构的流式文件（由一串顺序的字符流构成的文件，不划分记录）。
 
+* 文件的物理结构：顺序结构、链接结构、索引结构、多个物理块的索引表。
+
+* Unix 的三级索引结构：
+
+  * 文件的存取方法：顺序存取法、随机存取法。
+
+    文件的存储空间管理：外存空闲空间管理的数据结构通常称为磁盘分配表。常用的空闲空间的管理方法：位示图（用一个 bit 为 0、1 表示一个物理块的空闲情况）、空闲区表、空闲块链、成组链接法（每 100 块为一组进行记录空闲的块号和大小）。
+
+  * 文件链接
+
+    硬链接（两个文件目录表目指向同一个索引节点，即指不同的文件名与同一个文件实体的链接）、符号链接（在建立的新文件或目录并与原来的文件或目录的路径名进行映射）。
+
+  * 硬连接
+
+    原文件名和连接文件名都指向相同的物理地址。目录不能有硬连接；硬连接不能跨越文件系统（不能跨越不同的分区）文件在磁盘中只有一个拷贝，节省硬盘空间；由于删除文件要在同一索引节点属于唯一的连接时才能成功，因此可以防止不必要的误删除。
+
+  * 符号连接
+
+    用 In -s 命令建立文件的符号连接，符号连接是 linux 特殊文件的一种，作为一个文件，它的数据是它所连接的文件的路径名。类似 windows 下的快捷方式。可以删除原有的文件而保存连接文件，没有防止误删除功能。
 
 ## 8. 作业管理
 
+　　作业状态分为 4 中：提交（通过输入设备送人计算机）、后备（通过 Spooling 系统将作业输入到计算机系统的后备存储器中，等待作业调度程序调度）、执行和完成。
 
+　　常用的作业调度算法：先来先服务、短作业优先、响应比高优先、优先调度算法、均衡调度算法。
 
 ## 参考文章
 
