--- a/Java/线程/锁.md
+++ b/Java/线程/锁.md
@@ -8,3 +8,4 @@
 ## 参考文章
 1. [java中的各种锁详细介绍](https://www.cnblogs.com/jyroy/p/11365935.html)
 2. [Java中的锁分类与使用](https://www.cnblogs.com/hustzzl/p/9343797.html)
+3. [java中的几种锁（很详细）-小白收藏](https://blog.csdn.net/Hdu_lc14015312/article/details/100053032)
