--- a/system/死锁.md
+++ b/system/死锁.md
@@ -1,7 +1,5 @@
 #  死锁
 
-
-
 #### 4.1.12. 死锁
 
 　　两个以上的进程互相要求双方释放已经占用的资源导致无法继续运行下去的现象。
@@ -26,10 +24,23 @@
 
 #### 4.1.15. 产生死锁的四个必要条件：互斥条件、请求与保持条件、不可剥夺条件、循环等待条件。
 
+![](image/死锁必要条件.png)
+
 1. 互斥条件：一个资源一次只能被一个进程使用。
+
+   每个资源要么已经分配给了一个进程，要么就是可用的
+
 2. 请求与保持条件：一个进程因请求资源而阻塞时，对已获得的资源保持不放。
+
+   已经得到了某个资源的进程可以再请求新的资源。
+
 3. 不剥夺条件：进程已获取的资源，在未使用完之前，不能强行剥夺。
+
+   已经分配给一个进程的资源不能强制性地被抢占，它只能被占用它地进程显式地释放。
+
 4. 循环等待条件：若干进程之间形成一种头尾相连的循环等待资源关系。
+
+   有两个或者两个以上的进程组成一条环路，该环路中的每个进程都在等待下一个进程所占用的资源。
 
 　　这四个条件是死锁的必要条件，只要系统发生死锁，这些条件必然成立，而只要上述条件之一不满足，就不会发生死锁。
 
@@ -55,6 +66,60 @@
 #### 4.1.19. 死锁解除
 
 　　资源剥夺法、撤销进程法。
+
+## 处理方法
+
+　　主要有以下四种方法：
+
+* 鸵鸟策略
+* 死锁检测与死锁恢复
+* 死锁预防
+* 死锁避免
+
+## 鸵鸟策略
+
+　　把头埋在沙子里，假装根本没发生问题。
+
+　　因为解决死锁问题的代码很高，因此托辗策略这种不采取任务措施的方案会获得更高的性能。
+
+　　当发生死锁的时不会对用户造成多大影响，或发生死锁的概率很低，可以采用鸵鸟策略。
+
+　　大多数操作系统，包括 Unix、Linux 和 Windows ，处理死锁问题的办法仅仅时忽略它。
+
+## 死锁检测与死锁恢复
+
+　　不试图阻止死锁，而是当检测到死锁发生时，采取措施进行恢复。
+
+### 1. 每种类型一个资源的死锁检测
+
+![](image/每种类型一个资源的死锁检测.png)
+
+　　上图为资源分配图，其中方框表示资源，圆圈表示进程。资源指向进程表示该资源已经分配给该进程，进程指向资源表示进程请求获取该资源。
+
+　　图 a 可以抽取出环，如图 b，它满足了环路等待条件，因此会发生死锁。
+
+　　每种类型一个资源的死锁检测算法是通过检测有向图是否存在环来实现的，从一个节点出发进行深度优先搜索，对访问过的节点进行标记，如果访问了已经标记过的节点，就表示有向图存在环，也就是检测到死锁的发生。
+
+### 2. 每种类型多个资源的死锁检测
+
+![](image/每种类型多个资源的死锁检测.png)
+
+　　上图中，有三个进程四个资源，每个数据代表的含义如下：
+
+* E 向量：资源总量
+* A 向量：资源剩余量
+* C 矩阵：每个进程所拥有的资源数量，每一行都代表一个进程拥有资源的数量。
+* R 矩阵：每个进程请求的资源数量
+
+### 3. 死锁恢复
+
+
+
+## 死锁预防
+
+## 死锁避免
+
+
 
 ## 参考文章
 
