--- a/system/进程与线程.md
+++ b/system/进程与线程.md
@@ -198,15 +198,106 @@
 
 　　一个进程需要执行 100 个时间片，如果采用时间片轮转调度算法，那么需要交换 100 次。
 
-　　多级队列是为这种需要连续执行多个时间片的进程考虑，它设置了多个队列，每个队列时间片大小都不同，例如 1、2、4、8...。进程在
+　　多级队列是为这种需要连续执行多个时间片的进程考虑，它设置了多个队列，每个队列时间片大小都不同，例如 1、2、4、8...。进程在第一个队列没执行完，就会被移到下一个队列。这种方式下，之前的进程只需要交换 7 次。
 
+　　每个队列优先权也不同，最上面的优先级最高。因此只有上一个队列没有进程再排队，才能调度当前队列上的进程。
 
+　　可以将这种调度算法看成时间片轮转调度算法和优先级调度算法的结合。
+
+![](image/多级反馈队列.png)
 
 ### 3. 实时系统
 
+　　实时系统要求一个请求在一个确定时间内得到响应。
 
+　　分为硬实时和软实时，前者必须满足绝对的截至时间，后者可以容忍一定的超时。
 
-#### 进程的分类
+## 进程同步
+
+### 1. 临界区
+
+　　对临界资源进行访问的那段代码称为临界区。
+
+　　为了互斥访问临界资源，每个进程在进入临界区之前，需要先进行检查。
+
+### 2. 同步与互斥
+
+　　同步：多个进程因为合作产生的直接制约关系，使得进程有一定的先后执行关系。
+
+　　互斥：多个进程在同一适合只有一个进程能进入临界区。
+
+### 3. 信号量
+
+　　信号量（Semaphore）是一个整型变量，可以对其执行 down 和 up 操作，也就是常见的 P 和 V 操作。
+
+* down：如果信号量大于 0，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
+* up：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
+
+　　down 和 up 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
+
+　　如果信号量的取值只能为 0 或者 1，那么就成为了互斥量（Mutex），0 表示临界区已经加锁，1 表示临界区解锁。
+
+### 4. 管程
+
+　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不容易出错，也使得客户端代码调用更容易。
+
+　　管程有一个重要特性：在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程，否则其他进程永远不能使用管程。
+
+　　管程引入了条件变量以及相关的操作：wait() 和 signal() 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。singal() 操作用于唤醒被阻塞的进程。
+
+## 进程通信
+
+　　进程同步与进程通信很容易混淆，它们的区别在于：
+
+* 进程同步：控制多个进程按一定顺序执行。
+* 进程通信：进程间传输信息。
+
+　　进程通信是一种手段，而进程同步是一种目的。也就是说，为了能够达到进程同步的目的，需要让进程进行通信，传输一些进程同步所需要的信息。
+
+### 1. 管道
+
+　　管道是通过调用 pipe 函数创建的，fd[0] 用于读，fd[1] 用于写。
+
+　　它具有以下限制：
+
+* 只支持半双工通信（单向交替传输）；
+* 只能在父子进程或者兄弟进程中使用。
+
+![](image/管道.png)
+
+### 2. FIFO
+
+　　也称为命名管道，去除了管道只能在父子进程中使用的限制。
+
+　　FIFO 常用于客户-服务器应用程序中，FIFO 用作汇聚点，在客户进程和服务器进程之间传递数据。
+
+![](image/FIFO.png)
+
+### 3. 消息队列
+
+　　相比于 FIFO，消息队列具有以下有点：
+
+1. 消息队列可以独立于读写进程存在，从而避免了 FIFO 中同步管道的打开和关闭时可能产生的困难；
+2. 避免了 FIFO 的同步阻塞问题，不需要进程自己提供同步方法；
+3. 读进程可以根据消息里欸行有选择地接收消息，而不像 FIFO 那样只能默认地接收。
+
+### 4. 信号量
+
+　　它是一个计数器，用于为多个进程提供对共享数据对象的访问。
+
+### 5. 共享存储
+
+　　允许多个进程共享一个给定的存储区。因为熟不需要再进程之间复制，所以这是最快的一种 IPC。
+
+　　需要使用信号量来同步对共享存储的访问。
+
+　　多个进程可以将同一个文件映射到它们的地址空间从而实现共享内存。另外 XSL 共享内存不是使用文件，而是使用内存的匿名段。
+
+### 6. 套接字
+
+　　与其他通信机制不同的是，它可用于不用机器间的进程通信。
+
+## 进程的分类
 
 https://www.cnblogs.com/xdyixia/p/9257160.html
 
