--- a/system/内存管理.md
+++ b/system/内存管理.md
@@ -1,8 +1,6 @@
 #  内存管理
 
-
-
-## 5. 存储器管理
+　　内存管理也被称作存储器管理。
 
 ### 5.1. 存储器的层次
 
@@ -94,6 +92,118 @@
    但是这个方法优缺点：缺页比较少的时候（最近没有使用淘汰中的 “最近” 太长了）。所有的 R 都为 1（很少变成 0），每次都要转一圈才能找到换出去的页，退化成 FIFO，效率不高。
 
    改进：双指针，一个快，一个慢，像时钟一样（定时清除 R 位）（更像 clock），快时钟做 R 的清 0 定时清 0，等到慢指针转到这里的时候 R=0，说明在定时时间片内没有被访问，该页可以被替换了。
+
+
+
+## 虚拟内存
+
+　　虚拟内存的目的是为了网物理内存扩充成更大的逻辑内存，从而让程序获得更多的可用内存。
+
+　　为了更好的管理内存，操作系统将内存抽象成地址空间。每个程序拥有自己的地址空间，这个地址空间被分割成多个块，每个块称为一页。这些页被映射到物理内存，但不需要映射到连续的物理内存，也不需要所有页都必须再物理内存中。当程序引用到不再物理内存中的页时，由硬件执行必要的映射，将缺失的部分装入物理内存并重新执行失败的指令。
+
+　　从上面的描述可以看出，虚拟机内存允许程序不用将地址空间中的每一页都映射到物理内存，也就是说一个程序不需要全部调入内存就可以运行，这使得有限的内存运行大程序成为可能。例如有一台计算机可以产生 16 位地址，那么一个程序的地址空间范围是 0-64k。该计算机只有 32 KB 的物理内存，虚拟内存技术允许该计算机运行一个 64K 大小的程序。
+
+![](image/虚拟内存.png)
+
+## 分页系统地址映射
+
+　　内存管理单元（MMU）管理着地址空间和物理内存的转换，其中的页表（Page table）存储着页（程序地址空间）和页框（物理地址空间）的映射表。
+
+　　一个虚拟地址分成两个部分，一部分存储页面号，一部分存储偏移量。
+
+　　下图的页表存放着 16 个页，这 16 个页需要用 4 个比特位来进行索引定位。例如对于虚拟地址（0010 0000 0000 0100），前 4 位是存储页面号 2，读取表项内容为（1101），页表项最后一位表示是否存在于内存中，1 表示存在。后 12 位存储偏移量。这个页对应的页框的地址位（110 0000 0000 0100）。
+
+![](image/分页系统地址映射.png)
+
+## 页面置换算法
+
+　　在程序运行过程中，如果要访问的页面不在内存中，就发生缺页中断从而将该页调入内存中。此时如果内存已无空闲空间，系统必须从内存中调出一个页面到磁盘对换区中腾出空间。
+
+　　页面置换算法和缓存淘汰策略类似，可以将内存看成磁盘的缓存。在缓存系统中，缓存的大小有限，当有新的缓存达到时，需要淘汰一部分已经存在的缓存，这样才有空间存访新的缓存数据。
+
+　　页面置换算法的主要目标是使页面置换频率子最低（也可以说缺页率最低）。
+
+### 1. 最佳-OPT,Optimal replacement algorithm
+
+　　所选择的被换出的页面将是最长时间内不再被访问，通常可以保证获得最低的缺页率。
+
+　　是一种理论上的算法，因为无法知道一个页面多长时间不再被访问。
+
+　　举例：一个系统为某进程分配了三个物理块，并有如下页面引用序列：
+
+```　　
+7,0,1,2,0,3,0,4,2,3,0,3,2,1,2,0,1,7,0,1
+```
+
+　　开始运行时，先将 7,0,1 三个页面装入内存。当进程要访问页面 2 时，产生缺页中断，会将页面 7 换出，因为页面 7 再次被访问的时间最长。
+
+### 2. 最近最久未使用-LRU,Least Recently Used
+
+　　虽然无法知道将来要使用的页面情况，但是可以知道过去使用页面的情况。LRU 将最近最久未使用的页面换出。
+
+　　为了实现 LRU，需要在内存中维护一个所有页面的链表。当一个u二面被访问时，将这个页面移到链表表头。这样就能保证链表表尾的页面时最近最久为访问的。
+
+　　因为每次访问都需要更新链表，因此这种方式实现的 LRU 代理很高。
+
+```
+4,7,0,7,1,0,1,2,1,2,6
+```
+
+![](image/最近最久未使用.png)
+
+### 3. 最近未使用-NRU,Not Recently Used
+
+　　每个页面都有两个状态位：R 和 M，当页面被访问时设置页面的 R=1，当页面被修改时设置 M=1。其中 R 位会定时被清零。可以将页面分成以下四类：
+
+* R=0，M=0
+* R=0，M=1
+* R=1，M=0
+* R=1，M=1
+
+　　当发生缺页中断时，NRU 算法随机地从类编号最小地非空类中挑选一个页面将它换出。
+
+　　NRU 优先换出已经被修改地脏页面（R=0，M=1），而不是被频繁使用地干净页面（R=1，M=0）。
+
+### 4. 先进先出-FIFO,First In First Out
+
+　　选择换出地页面时最先进入的页面。
+
+　　该算法会将那些经常被访问的页面换出，导致缺页率升高。
+
+### 5. 第二次机会算法
+
+　　FIFO 算法可能会把经常使用的页面置换出去，为了避免这一问题，对该算法做一个简单的修改：
+
+　　当页面被访问（读或写）时设置该页面的 R 位为 1。需要替换的时间，检查最老页面的 R 位。如果 R 位是 0，那么这个页面既老又没有被使用，可以立即置换掉；如果是 1，就将 R 位清 0，并把该页面放到链表的尾端，修改它的装入时间使它就像刚装入的一样，然后继续从链表的头部开始搜索。
+
+![](image/第二次机会算法.png)
+
+## 6. 时钟 -Clock
+
+　　第二次机会算法需要在链表中移动页面，降低了效率。时钟算法使用环形链表将页面连接起来，再使用一个指针指向最老的页面。
+
+![](image/时钟.png)
+
+## 分段
+
+　　虚拟内存采用的是分页技术，也就是将地址空间划分成固定大小的页，每一页再与内存进行映射。
+
+　　下图为一个编译器在编译过程中建立的多个表，有 4 个表是动态增长的，如果使用分页系统的一维地址空间，动态增长的特点会导致覆盖问题的出现。
+
+![](image/分页覆盖.png)
+
+　　分段的做法是把每个表分成段，一个段构成一个独立的地址空间。每个段的长度可以不同，并且可以动态增长。
+
+## 段页式
+
+　　程序的地址空间划分成多个拥有独立地址空间的段，每个段上的地址空间划分成大小相同的页。这样即拥有分段系统的共享和保护，又拥有分页系统的虚拟内存功能。
+
+## 分页与分段的比较
+
+1. 对程序员的透明性：分页透明，但是分段需要程序员显式划分每个段。
+2. 地址空间的维度：分页是一维地址空间，分段是二维的。
+3. 大小是否可以改变：页的大小不可变，段的大小可以动态改变。
+4. 出现的原因：分页主要用于实现虚拟内存，从而获得更大的地址空间；分段主要是为了使程序和数据可以被划分为逻辑上独立的地址空间并且有助于共享和保护。
 
 ## 参考文章
 
